--- a/vambora/public/css/style.css
+++ b/vambora/public/css/style.css
@@ -55,11 +55,11 @@ nav{
 
 
 .btn-nav{
-  margin-left: 55.8%;
+  margin-left: 52.5%;
 }
 
 .btn-nav-logado{
-  margin-left: 42%;
+  margin-left: 40.5%;
 }
 
 nav a{
@@ -68,11 +68,13 @@ nav a{
   color: #424242;
   text-transform: uppercase;
   padding-left: 16px;
+  
 
 }
 
 nav a:hover{
   color: #c94a30;
+  
 }
 
 nav img{
@@ -115,6 +117,10 @@ nav img{
   background: #009fe3;
   color: white;
   border: none;
+}
+
+.form-buscar-grupo  input[type=submit]:hover{
+  opacity: 0.7;
 }
 
 .links-grupo{
@@ -191,6 +197,10 @@ STYLE LOGIN
   color: white;
 }
 
+.login input[type=submit]:hover{
+  opacity: 0.7;
+}
+
 .img-fundo img{
   opacity: 0.4;
   max-width: 100%;
@@ -210,7 +220,7 @@ STYLE CADASTRAR USUÁRIO
   width: 49rem;
   background: white;
   height: 41em;
-  margin: 7em 0 0 20em;
+  margin: 3em 0 0 20em;
   box-shadow: 1px 1px 10px 0;
   position: absolute;
   top: 64px;  
@@ -234,6 +244,10 @@ STYLE CADASTRAR USUÁRIO
   background: #009fe3;
   color: white;
   border: unset;
+}
+
+.cadastrar-usuario input[type=submit]:hover{
+  opacity: 0.7;
 }
 
 
@@ -301,4 +315,90 @@ STYLE PERFIL USUÁRIO
   color: #424242;
   text-transform: uppercase;
   padding-left: 16px;
+}
+
+/*
+================================================
+STYLE PESQUISAR GRUPO
+================================================
+*/
+
+.pesquisa-grupo{
+  width: 50%;
+  margin: 2em 0 1em 22em;
+}
+
+.pesquisa-grupo .card-grupo{
+  margin-bottom: 1em;
+  transition: opacity 1s;
+  opacity: 0;
+  box-shadow: 4px 5px 14px -6px;
+}
+.page-loaded .pesquisa-grupo .card-grupo {
+  opacity: 1;
+}
+
+.pesquisa-grupo .nome-grupo img{
+  max-width: 2em;
+}
+
+.pesquisa-grupo .nome-grupo span{
+  position: relative;
+  bottom: 0.5em;
+  padding-left: 1em;  
+  font-weight: bold;
+}
+
+.pesquisa-grupo .nome-grupo{
+  background:#ffd200;
+  padding: 1em;
+}
+
+.pesquisa-grupo .data{
+  float: right;
+  padding-top: 0.7em;
+}
+
+.pesquisa-grupo .btn-participar{
+  background: #1a884c;
+  text-align: center; 
+  padding: 0.6em 0;
+}
+
+.pesquisa-grupo .dados-grupo{
+  padding: 1em 0 1em 4.2em;
+  background: white;
+}
+
+.pesquisa-grupo .btn-participar a{
+  text-decoration: none;
+  color: white;
+}
+
+.pesquisa-grupo .btn-participar:hover{
+  opacity: 0.7;
+}
+
+.form-pesquisar-grupo{
+  margin-top: 3rem;
+}
+
+.form-pesquisar-grupo input[type=text] {
+  width: 40.7%;
+  padding: 12px 20px;
+  margin: 8px 0 0 21.8em;
+  box-sizing: border-box;
+  font-size: 1rem;
+}
+
+.form-pesquisar-grupo input[type=submit] {
+  width: 126px;
+  height: 2.7rem;
+  background: #009fe3;
+  color: white;
+  border: none;
+}
+
+.form-pesquisar-grupo input[type=submit]:hover{
+  opacity: 0.7;
 }
