--- a/vambora/public/css/style.css
+++ b/vambora/public/css/style.css
@@ -1,3 +1,7 @@
+html{
+  background-color: #f0f0f061;
+}
+
 html, body {
   margin: 0;
   font-family: "Helvetica Neue" ,Arial, Helvetica, sans-serif;
@@ -7,7 +11,7 @@ html, body {
   font-weight: normal;
   font-style: normal;
   color: #424242;
-  background-color: #f0f0f061;
+  
 }
 
 input[type], select {
@@ -40,11 +44,14 @@ STYLE HOME
 */
 
 nav{
+  width: 100%;
   display: flex;
   background: #ffd200;
   padding-top: 1.1rem;
   height: 42px;
   box-shadow: 0 0 2px 0;
+  position: fixed;
+  top: 0;
 }
 
 .logo img{
@@ -53,13 +60,25 @@ nav{
   top: -1rem;
 }
 
-
-.btn-nav{
-  margin-left: 52.5%;
+nav .menu{
+  width: 80%;
 }
 
-.btn-nav-logado{
-  margin-left: 40.5%;
+nav .menu-list{
+  list-style-type: none;
+  display: inline;
+}
+
+nav .menu-list li{
+  float: left;
+}
+
+nav .logado{
+  padding-left: 34em;
+}
+
+nav .deslogado{
+  padding-left: 44em;
 }
 
 nav a{
@@ -68,14 +87,33 @@ nav a{
   color: #424242;
   text-transform: uppercase;
   padding-left: 16px;
-  
-
+  padding-bottom: 1em;
 }
 
 nav a:hover{
-  color: #c94a30;
-  
+  color: #c94a30;  
 }
+
+nav li:hover > .sub-menu {
+  display: block;
+}
+
+nav .menu .sub-menu{
+  list-style-type: none;
+  position: absolute;
+  top: 45px;
+  margin-left: 1em;
+  background: white;
+  min-width: 200px;
+  z-index: 1000;
+  padding: 0.5em;
+  display: none;
+}
+
+nav .menu .sub-menu li{
+  float: unset;
+}
+
 
 nav img{
   width: 17px;
@@ -86,8 +124,8 @@ nav img{
 
 .conteudo{
   display: flex;
-  margin-top: 8rem;
-  padding-left: 17em;;
+  margin-top: 11.3rem;
+  padding-left: 18.3em;
 }
 
 .conteudo img{
@@ -171,7 +209,7 @@ STYLE LOGIN
   width: 31rem;
   height: 22rem;
   background: white;
-  margin: 7em 0 0 29em;
+  margin: 9em 0 0 29em;
 }
 
 .login .conteudo-texto{
@@ -220,7 +258,7 @@ STYLE CADASTRAR USUÁRIO
   width: 49rem;
   background: white;
   height: 41em;
-  margin: 3em 0 0 20em;
+  margin: 4rem 0 0 17rem;
   box-shadow: 1px 1px 10px 0;
   position: absolute;
   top: 64px;  
@@ -228,7 +266,7 @@ STYLE CADASTRAR USUÁRIO
 
 .cadastrar-usuario .conteudo-texto{
   background: #ffd200;
-  padding: 1em 0 1em 2.8em;
+  padding: 0.1em 0 1px 2.8em;
 }
 .form-cadastro{
   padding: 2em 0 0 2.8em;
@@ -260,20 +298,22 @@ STYLE CADASTRAR VIAGEM
 .cadastrar-viagem{
   width: 51rem;
   background: white;
-  height: 40rem;
-  margin: 3rem 0 0 17rem;  
-  position: absolute;
-  top: 64px;  
+  height: 33rem;
+  margin: 6rem 0 0 17rem;
 }
 
 .nav-form{
   background: #ffd200;
-  padding: 1em 5em;
+  padding: 0.1em 5em;
 }
 
-.cadastrar-viagem input[type] {
+.cadastrar-viagem input[type]{
   width: 100%;
   margin-bottom: 0.3rem;
+}
+
+.cadastrar-viagem .form-cadastro-viagem .form-data{
+  width: 43.4%; 
 }
 
 .cadastrar-viagem select{
@@ -332,8 +372,15 @@ STYLE PESQUISAR GRUPO
   margin-bottom: 1em;
   transition: opacity 1s;
   opacity: 0;
-  box-shadow: 4px 5px 14px -6px;
+  box-shadow: 4px 5px 14px -9px;
 }
+
+.pesquisa-grupo .card-grupo:hover{
+  box-shadow: 0px 0px 15.7px -2px;
+  cursor: pointer;
+}
+
+
 .page-loaded .pesquisa-grupo .card-grupo {
   opacity: 1;
 }
@@ -343,8 +390,6 @@ STYLE PESQUISAR GRUPO
 }
 
 .pesquisa-grupo .nome-grupo span{
-  position: relative;
-  bottom: 0.5em;
   padding-left: 1em;  
   font-weight: bold;
 }
@@ -380,7 +425,7 @@ STYLE PESQUISAR GRUPO
 }
 
 .form-pesquisar-grupo{
-  margin-top: 3rem;
+  margin-top: 6rem;
 }
 
 .form-pesquisar-grupo input[type=text] {
