--- a/vambora/public/css/style.css
+++ b/vambora/public/css/style.css
@@ -14,6 +14,17 @@ html, body {
   
 }
 
+input[type=submit] { 
+  background: #009fe3;
+  color: white;
+  border: none;
+}
+
+input[type=submit]:hover{
+  opacity: 0.7;
+}
+
+
 input[type], select {
   padding: 12px 20px;
   box-sizing: border-box;
@@ -52,6 +63,7 @@ nav{
   box-shadow: 0 0 2px 0;
   position: fixed;
   top: 0;
+  z-index: 1;
 }
 
 .logo img{
@@ -73,12 +85,20 @@ nav .menu-list li{
   float: left;
 }
 
+nav .menu-list .img-perfil{
+  border-radius: 60px;
+  width: 30px;
+  height: 30px;
+  position: relative;
+  top: -0.1em;
+}
+
 nav .logado{
-  padding-left: 34em;
+  padding-left: 32em;
 }
 
 nav .deslogado{
-  padding-left: 44em;
+  padding-left: 38em;
 }
 
 nav a{
@@ -151,14 +171,7 @@ nav img{
 
 .form-buscar-grupo  input[type=submit] {
   width: 126px;
-  height: 2.7rem;
-  background: #009fe3;
-  color: white;
-  border: none;
-}
-
-.form-buscar-grupo  input[type=submit]:hover{
-  opacity: 0.7;
+  height: 2.7rem; 
 }
 
 .links-grupo{
@@ -230,22 +243,14 @@ STYLE LOGIN
   padding: 0.5em 0 0 2.3em;
 }
 
-.login input[type=submit]{
-  background: #009fe3;
-  color: white;
-}
-
-.login input[type=submit]:hover{
-  opacity: 0.7;
-}
-
 .img-fundo img{
   opacity: 0.4;
   max-width: 100%;
 }
 
-.login input[type=submit]{
-  border: unset;
+.recuperar-senha{
+  font-size: 0.8em;  
+  margin-left: 27em;
 }
 
 /*
@@ -257,11 +262,11 @@ STYLE CADASTRAR USUÁRIO
 .cadastrar-usuario{
   width: 49rem;
   background: white;
-  height: 41em;
-  margin: 4rem 0 0 17rem;
+  height: 43em;
+  margin: 0rem 0 0 17rem;
   box-shadow: 1px 1px 10px 0;
   position: absolute;
-  top: 64px;  
+  top: 30px;  
 }
 
 .cadastrar-usuario .conteudo-texto{
@@ -269,7 +274,7 @@ STYLE CADASTRAR USUÁRIO
   padding: 0.1em 0 1px 2.8em;
 }
 .form-cadastro{
-  padding: 2em 0 0 2.8em;
+  padding: 1em 0 5em 2.8em;
 }
 
 .cadastrar-usuario input[type], select {
@@ -278,16 +283,8 @@ STYLE CADASTRAR USUÁRIO
 }
 
 .cadastrar-usuario input[type=submit]{
-  width: 92%;
-  background: #009fe3;
-  color: white;
-  border: unset;
+  width: 92%;  
 }
-
-.cadastrar-usuario input[type=submit]:hover{
-  opacity: 0.7;
-}
-
 
 /*
 ================================================
@@ -325,10 +322,7 @@ STYLE CADASTRAR VIAGEM
 }
 
 .cadastrar-viagem input[type=submit]{
-  width: 100%;
-  background: #009fe3;
-  color: white;
-  border: unset;
+  width: 100%; 
 }
 
 .cadastrar-viagem p{
@@ -342,20 +336,48 @@ STYLE PERFIL USUÁRIO
 */
 
 .container-perfil{
-  background: #ffd200;
-  padding: 3rem 9rem 6rem 9rem;
-  width: 14rem;
-  margin: 3rem 0 0 29rem;
-  box-shadow: 1px 1px 10px 0;
+  background: white;
+  width: 32rem;
+  height: 30em;
+  margin: 7rem 0 0 29rem;
 }
 
 .container-perfil a{
   text-decoration: none;
-  font-size: 11px;
-  color: #424242;
-  text-transform: uppercase;
-  padding-left: 16px;
+  color: white;  
+  font-size: 1.1em;
 }
+
+.container-perfil button{  
+  width: 14em;
+  margin-top: 6em;
+}
+
+.container-perfil button:hover{ 
+  opacity: 0.5;
+}
+
+.container-perfil .editar{
+  margin-left: 4.8em;
+}
+
+.container-perfil .desativar{
+  background: #f52046e8;  
+}
+
+
+
+.container-perfil .titulo{
+  background: #ffd200;
+  padding: 0.1em 0 0.1em 2em;
+}
+
+.container-perfil p{
+  padding-left: 2em;
+}
+
+
+
 
 /*
 ================================================
@@ -395,19 +417,23 @@ STYLE PESQUISAR GRUPO
 }
 
 .pesquisa-grupo .nome-grupo{
-  background:#ffd200;
+  border-bottom: 1px solid #4242;
   padding: 1em;
+  background: #cccccc9e;
 }
 
 .pesquisa-grupo .data{
   float: right;
-  padding-top: 0.7em;
+  
 }
 
 .pesquisa-grupo .btn-participar{
-  background: #1a884c;
-  text-align: center; 
-  padding: 0.6em 0;
+  background: #ffd200;
+  text-align: center;
+  padding: 0.6em 0em;
+  width: 9em;
+  margin-left: 27em;
+  
 }
 
 .pesquisa-grupo .dados-grupo{
@@ -417,7 +443,7 @@ STYLE PESQUISAR GRUPO
 
 .pesquisa-grupo .btn-participar a{
   text-decoration: none;
-  color: white;
+  color: #424242;
 }
 
 .pesquisa-grupo .btn-participar:hover{
@@ -438,12 +464,85 @@ STYLE PESQUISAR GRUPO
 
 .form-pesquisar-grupo input[type=submit] {
   width: 126px;
-  height: 2.7rem;
-  background: #009fe3;
-  color: white;
-  border: none;
+  height: 2.7rem;  
 }
 
-.form-pesquisar-grupo input[type=submit]:hover{
-  opacity: 0.7;
+/*
+================================================
+STYLE GRUPO
+================================================
+*/
+
+.form-grupo {
+  width: 50%;
+  margin: 0 auto;
+  padding-top: 3em;
+
 }
+
+.form-grupo input[type=text]{
+  width: 43.3em;
+  height: 6em;
+
+}
+
+.form-grupo input[type=submit]{  
+  width: 103px;  
+  height: 2.5rem;
+  margin: 0.4em 0 0 2.8em;
+  font-size: 0.9rem;
+}
+
+.container-grupo{
+  display: flex;
+  padding-top: 13em; 
+}
+
+.grupo{
+  width: 25.4%;
+  padding-left: 2em;
+  background: white;
+  margin-right: 1em; 
+}
+
+.grupo img{
+  width: 2.5em;
+}
+
+.grupo span{
+  font-weight: bold;
+  position: relative;
+  top: -0.5em;
+}
+
+.mensagem{
+  width: 50%;  
+  background: white;
+ 
+}
+
+.mensagem span{
+  font-weight: bold;
+  position: relative;
+  top: -1.1em;
+}
+
+table{
+  width: 100%;  
+  table-layout: fixed;
+}
+
+table th{
+  word-wrap: break-word;
+}
+
+table p{
+  font-weight: normal;
+  font-size: 0.9em;
+}
+
+.txt-nao-msg{
+  text-align: center;
+}
+
+
