--- a/vambora/public/css/style.css
+++ b/vambora/public/css/style.css
@@ -1,9 +1,13 @@
-html{
-  background-color: #f0f0f061;
-}
-
-html, body {
+html,
+body {
   margin: 0;
+  padding: 0;
+  border: 0;
+  outline: none;  
+  vertical-align: baseline;
+  background: transparent;
+  min-height: 100%;
+  background-color: #f0f0f061;
   font-family: "Helvetica Neue" ,Arial, Helvetica, sans-serif;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -11,13 +15,25 @@ html, body {
   font-weight: normal;
   font-style: normal;
   color: #424242;
-  
+}
+
+body {
+  font-size: calc(1.3vw + 1.3vh + 0.65vmin);
+}
+
+strong{
+  font-size: 0.7em;
+}
+
+p{
+  font-size: 0.6em;
 }
 
 input[type=submit] { 
   background: #009fe3;
   color: white;
   border: none;
+  font-size: 0.5em;
 }
 
 input[type=submit]:hover{
@@ -28,7 +44,8 @@ input[type=submit]:hover{
 input[type], select {
   padding: 12px 20px;
   box-sizing: border-box;
-  font-size: 1rem;
+  font-size: 0.5em;
+  
 }
 
 .logo-centro{
@@ -102,8 +119,7 @@ nav .deslogado{
 }
 
 nav a{
-  text-decoration: none;
-  font-size: 11px;
+  text-decoration: none;  
   color: #424242;
   text-transform: uppercase;
   padding-left: 16px;
@@ -158,7 +174,7 @@ nav img{
   /* color: white; */
   padding-left: 2.4rem;
   line-height: 2.2rem;
-  font-size: 1.6rem;
+  
 }
 
 .form-buscar-grupo input[type=text] {
@@ -166,7 +182,7 @@ nav img{
   padding: 12px 20px;
   margin: 8px 0 0 2.5em;
   box-sizing: border-box;
-  font-size: 1rem;  
+   
 }
 
 .form-buscar-grupo  input[type=submit] {
@@ -190,7 +206,7 @@ nav img{
   display: inline;
   background: white;
   padding: 0.7em;  
-  font-size: 0.9em;  
+   
 }
 
 .dados-viagem ul li:hover{
@@ -219,21 +235,23 @@ STYLE LOGIN
 */
 
 .login{
-  width: 31rem;
-  height: 22rem;
+  width: 17em;
+  height: 14em;
   background: white;
-  margin: 8em 0 0 29em;
+  margin: 0 auto;
+  margin-top: 3em;
 }
 
 .img-login img{
-  max-width: 22em;
-  padding: 0.7em 0 0.1em 4.3em;
+  max-width: 9.9em;
+  padding: 0.1em 0 0.1em 3.6em;
 }
 
 
 .login .conteudo-texto{
   background: #ffd200; 
-  padding: 0.1em 0 0.2em 2.4em;
+  padding: 0.1em 0;
+  text-align: center;
 }
 
 .login form{
@@ -246,7 +264,7 @@ STYLE LOGIN
 }
 
 .login p{
-  padding: 0.5em 0 0 2.3em;
+  text-align: center;  
 }
 
 .img-fundo img{
@@ -255,8 +273,9 @@ STYLE LOGIN
 }
 
 .recuperar-senha{
-  font-size: 0.8em;  
-  margin-left: 27em;
+  font-size: 0.5em; 
+  float: right;
+  padding-right: 1em;
 }
 
 /*
@@ -351,7 +370,7 @@ STYLE PERFIL USUÁRIO
 .container-perfil a{
   text-decoration: none;
   color: white;  
-  font-size: 1.1em;
+  
 }
 
 .container-perfil button{  
@@ -465,7 +484,7 @@ STYLE PESQUISAR GRUPO
   padding: 12px 20px;
   margin: 8px 0 0 21.8em;
   box-sizing: border-box;
-  font-size: 1rem;
+  
 }
 
 .form-pesquisar-grupo input[type=submit] {
@@ -496,7 +515,7 @@ STYLE GRUPO
   width: 103px;  
   height: 2.5rem;
   margin: 0.4em 0 0 2.8em;
-  font-size: 0.9rem;
+  
 }
 
 .container-grupo{
@@ -544,7 +563,7 @@ table th{
 
 table p{
   font-weight: normal;
-  font-size: 0.9em;
+  
 }
 
 .txt-nao-msg{
