--- a/vambora/public/css/style.css
+++ b/vambora/public/css/style.css
@@ -240,7 +240,7 @@ nav img{
   }
 
   .btn-mobile img{
-    width: 3em;
+    width: 2.4em;
   }
   
 
@@ -272,6 +272,7 @@ STYLE LOGIN
 
 .pagina-login{
   padding-top: 3.5em;
+  display: flex;
 }
 .login{
   width: 17em;
@@ -406,7 +407,7 @@ STYLE CADASTRAR VIAGEM
 }
 
 .cadastrar-viagem .form-cadastro-viagem .form-data{
-  width: 43.4%; 
+  width: 49.1%;
 }
 
 .cadastrar-viagem select{
@@ -480,7 +481,7 @@ STYLE PERFIL USUÁRIO
   text-align: center;
   font-size: 0.5em;
   padding: 0.9em 0;
-  background: #f52046e8; 
+  background: #ff0000ad;
   margin-bottom: 2em !important; 
 }
 
@@ -668,28 +669,21 @@ STYLE GRUPO
 */
 
 .form-grupo {
-  width: 50%;
+  width: 100%;
   margin: 0 auto;
-  padding-top: 3em;
-
+  padding-top: 1.4em;
 }
 
 .form-grupo input[type=text]{
   width: 43.3em;
-  height: 6em;
-
 }
 
 .form-grupo input[type=submit]{  
-  width: 103px;  
-  height: 2.5rem;
-  margin: 0.4em 0 0 2.8em;
-  
+  width: 9em;
+  height: 2.9em;
+  margin: 0.4em 0 0 0em;
 }
 
-.container-grupo{ 
-  padding-top: 2em;
-}
 
 .grupo{
   width: 25.4%;
@@ -710,13 +704,72 @@ STYLE GRUPO
   top: -0.5em;
 }
 
-.mensagem{
-  width: 60%;  
-  background: white;
-  float: right;
-  height: 100%;
-  margin-right: 1em; 
+.container-grupo{ 
+  width: 65%;
+  margin: 0 auto;
+  padding-top: 1em;
 }
+
+.card-inc{
+  background: white;
+  width: 92%;
+  margin: 0 auto;
+  /* padding: 1em; */
+  text-align: center;
+  padding: 0.5em 0;
+  margin-bottom: 0.6em;
+  border: solid 1px #4242;  
+}
+
+.card-msg{
+  width: 92%;
+  background: white;
+  border: solid 1px #4242;  
+  height: 7em;
+  margin: 0 auto;    
+}
+
+.card-msg hr{  
+  /* color: white; */
+  /* border-color: #66666640; */
+  border: solid 0.5px #66666624;
+}
+
+.card-msg .img{
+  width: 5em;
+}
+
+.card-msg img{
+  max-width: 100%;
+  border-radius: 50%;
+  overflow: hidden;
+  margin: 0.4em 0 0 0.5em;
+}
+
+.mensagem{  
+  display: flex;
+}
+
+.mensagem .dados-msgm{
+  padding: 0.4em 0 0 1em; 
+  font-weight: bold;
+  color: #0064ffc2;
+}
+
+.mensagem .dados-msgm p{
+  padding: 0;
+  font-weight: normal;
+  font-size: 0.4em;
+}
+
+.mensagem p{
+  font-size: 0.5em;
+  padding: 0em 2em;
+  text-align: justify;
+  color: #666666;
+}
+
+
 
 .mensagem span{
   font-weight: bold;
@@ -742,4 +795,56 @@ table p{
   text-align: center;
 }
 
+
+/*
+================================================
+STYLE PESQUISAR BLOG
+================================================
+*/
+
+.blog{
+  padding-top: 2em;
+}
+
+.add-experiencia{
+  width: 38em;
+  margin: 0 auto;
+  text-align: center;
+  background: white;
+  padding: 0.1em 0;
+  margin-top: 1em;
+}
+
+.btn-historia p{
+  width: 10em;
+  margin: 0 auto;
+  margin-top: 1em;
+  background: #009fe3;
+  padding: 0.5em 2.1em;
+  text-align: center;
+  color: white;
+}
+
+.cont-blog{
+  width: 38em;
+  margin: 0 auto;
+  background: white;
+  margin-top: 1.7em;
+}
+
+.img-blog{  
+  display: flex;
+}
+
+.esq{
+  width: 4em;
+  margin: 1em;
+}
+
+.img-blog img{
+  max-width: 100%;
+  border-radius: 50%;
+  overflow: hidden;
+  margin: 0.4em 0 0 0.5em;
+}
 
