--- a/vambora/public/css/style.css
+++ b/vambora/public/css/style.css
@@ -841,10 +841,18 @@ STYLE PESQUISAR BLOG
   margin: 1em;
 }
 
+.dir{
+  margin: 2.3em 0 0 1.4em;
+}
+
 .img-blog img{
   max-width: 100%;
   border-radius: 50%;
   overflow: hidden;
   margin: 0.4em 0 0 0.5em;
+}
+
+.txt-blog{
+  padding: 1em;
 }
 
