--- a/vambora/public/css/style.css
+++ b/vambora/public/css/style.css
@@ -778,21 +778,20 @@ STYLE GRUPO
 }
 
 .card-inc{
-  background: white;
-  width: 92%;
+  background: white; 
   margin: 0 auto;
   /* padding: 1em; */
   text-align: center;
   padding: 0.5em 0;
   margin-bottom: 0.6em;
   border: solid 1px #4242;  
+  margin-top: 2em;
 }
 
-.card-msg{
-  width: 92%;
+.card-msg{  
   background: white;
   border: solid 1px #4242;  
-  height: 7em;
+  height: 5.7em;
   margin: 0 auto;    
 }
 
@@ -803,7 +802,7 @@ STYLE GRUPO
 }
 
 .card-msg .img{
-  width: 5em;
+  width: 3em;
 }
 
 .card-msg img{
@@ -836,8 +835,6 @@ STYLE GRUPO
   color: #666666;
 }
 
-
-
 .mensagem span{
   font-weight: bold;
   position: relative;
@@ -854,14 +851,48 @@ table th{
 }
 
 table p{
-  font-weight: normal;
-  
+  font-weight: normal;  
 }
 
 .txt-nao-msg{
   text-align: center;
 }
 
+.comentario{
+  position: relative;
+  top: -0.6em; 
+  padding-left: 3.3em;
+}
+
+.comentario img{
+  max-width: 0.6em;
+}
+
+.comentario span{
+  position: relative;
+  top: -0.4em;
+  font-size: 0.4em;
+  padding-left: 0.7em;
+
+}
+
+.contagem{
+  display: flex;
+  background: #060606ba;
+  padding: 1em 1em;
+  color: white;
+  margin-bottom: 0.6em;
+  padding-left: 7em;
+}
+
+.contagem span{
+  text-transform: uppercase;
+  font-size: 0.7em;
+}
+
+.contagem .dia{
+  margin-left: 0.8em;
+}
 
 /*
 ================================================
