--- a/vambora/public/css/style.css
+++ b/vambora/public/css/style.css
@@ -89,7 +89,11 @@ input[type], select {
 STYLE HOME
 ================================================
 */
-.container{
+
+.topo{
+  display: none;
+}
+.container{ 
   width: 100%;
   float: left;
   text-align: center;  
@@ -260,6 +264,14 @@ nav img{
 
 .modal a{
   font-size: 0.8em;
+}
+
+#carregando{  
+  background: url("../img/loading.gif") center no-repeat;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  background: white;
 }
 
 footer{
@@ -434,7 +446,7 @@ STYLE CADASTRAR USUÁRIO
 .cadastrar-usuario{
   width: 25em;
   background: white;
-  height: 28.1em;
+  height: 31.1em;
   margin: 0 auto;
   box-shadow: 1px 1px 10px 0;  
 }
@@ -695,6 +707,11 @@ STYLE PESQUISAR GRUPO
   text-align: center;
   padding: 0.3em 0;  
 }
+
+.pesquisa-grupo .meu-grupo{
+  background: #00e352b5 !important; 
+}
+
 
 .pesquisa-grupo .btn-participar a{
   text-decoration: none;
