--- a/vambora/public/css/style.css
+++ b/vambora/public/css/style.css
@@ -3,7 +3,7 @@ body {
   margin: 0;
   padding: 0;
   border: 0;
-  outline: none;  
+  outline: none;
   vertical-align: baseline;
   background: transparent;
   min-height: 100%;
@@ -37,7 +37,7 @@ a{
   text-decoration: unset;
 }
 
-input[type=submit] { 
+input[type=submit] {
   background: #009fe3;
   color: white;
   border: none;
@@ -48,11 +48,11 @@ input[type=submit]:hover{
   opacity: 0.7;
 }
 
-input[type], select { 
+input[type], select {
   box-sizing: border-box;
-  font-size: 0.5em; 
+  font-size: 0.5em;
   height: 2.9em;
-  padding-left: 1em; 
+  padding-left: 1em;
 }
 
 .logo-centro{
@@ -93,12 +93,12 @@ STYLE HOME
 .topo{
   display: none;
 }
-.container{ 
+.container{
   width: 100%;
   float: left;
-  text-align: center;  
+  text-align: center;
   background: #fff157;
-  position: fixed; 
+  position: fixed;
   border-bottom: 1px solid #c9dae1;
   z-index: 1;
 }
@@ -106,9 +106,9 @@ STYLE HOME
 .container2{
   width: 100%;
   float: left;
-  text-align: center;  
-  background: white; 
-  position: fixed; 
+  text-align: center;
+  background: white;
+  position: fixed;
   border-bottom: 0.1px solid #aaa;
 }
 
@@ -155,15 +155,15 @@ nav .menu-list .img-perfil{
 }
 
 nav a{
-  text-decoration: none;  
+  text-decoration: none;
   color: #424242;
   text-transform: uppercase;
   padding-left: 16px;
-  padding-bottom: 1em;  
+  padding-bottom: 1em;
 }
 
 nav a:hover{
-  color: #c94a30;  
+  color: #c94a30;
 }
 
 nav li:hover > .sub-menu {
@@ -172,13 +172,17 @@ nav li:hover > .sub-menu {
 
 .menu .sub-menu{
   list-style-type: none;
-  position: absolute; 
+  position: absolute;
   margin-left: 1em;
   background: white;
   min-width: 200px;
   z-index: 1000;
   padding: 0.5em;
   display: none;
+}
+
+.menu .notificacoes_container{
+  right: 1rem;
 }
 
 .menu .sub-menu li{
@@ -213,7 +217,7 @@ nav img{
 .menu-responsivo{
   position: absolute;
   background: #424242;
-  color: white;  
+  color: white;
   height: 100%;
   width: 100%;
   display: none;
@@ -221,7 +225,7 @@ nav img{
 
 .menu-responsivo a{
   color: white;
-  
+
 }
 
 .menu-responsivo a:hover{
@@ -231,7 +235,7 @@ nav img{
 .menu-responsivo ul{
   text-align: center;
   list-style-type: none;
-  padding-top: 11em; 
+  padding-top: 11em;
   padding-left: 0;
 }
 
@@ -266,7 +270,7 @@ nav img{
   font-size: 0.8em;
 }
 
-#carregando{  
+#carregando{
   background: url("../img/loading.gif") center no-repeat;
   position: absolute;
   height: 100%;
@@ -276,7 +280,7 @@ nav img{
 
 footer{
   bottom: 0;
-  width: 100%;  
+  width: 100%;
   text-align: center;
   font-size: 0.6em;
   position: absolute;
@@ -288,7 +292,7 @@ footer{
     position: initial;
   }
   .logo{
-    float: left;     
+    float: left;
   }
 
   .menu{
@@ -327,8 +331,8 @@ footer{
     width: 3.4em;
     padding-bottom: 1.7em;
   }
-  
- 
+
+
   .btn-mobile{
     display: block;
     list-style-type: none;
@@ -338,16 +342,16 @@ footer{
   .btn-mobile img{
     width: 2.4em;
   }
-  
+
 
   .menu-mobile img{
     width: 23px;
     position: relative;
-    top: -8px;    
+    top: -8px;
     padding-left: 7em;
   }
 
- 
+
   .conteudo input[type=text] {
     width: 29.7em;
     height: 4.7em;
@@ -384,7 +388,7 @@ STYLE LOGIN
 
 
 .login .conteudo-texto{
-  background: #fff157; 
+  background: #fff157;
   padding: 0.1em 0;
   text-align: center;
 }
@@ -399,7 +403,7 @@ STYLE LOGIN
 }
 
 .login p{
-  text-align: center;  
+  text-align: center;
 }
 
 .img-fundo img{
@@ -408,7 +412,7 @@ STYLE LOGIN
 }
 
 .recuperar-senha{
-  font-size: 0.5em; 
+  font-size: 0.5em;
   float: right;
   padding-right: 1em;
 }
@@ -448,7 +452,7 @@ STYLE CADASTRAR USUÁRIO
   background: white;
   height: 31.1em;
   margin: 0 auto;
-  box-shadow: 1px 1px 10px 0;  
+  box-shadow: 1px 1px 10px 0;
 }
 
 .cadastrar-usuario .conteudo-texto{
@@ -459,7 +463,7 @@ STYLE CADASTRAR USUÁRIO
   padding: 1em 0 5em 2.8em;
 }
 
-.form-cadastro a{  
+.form-cadastro a{
   text-decoration: unset;
   background:#ff0000ad;
   font-size: 0.5em;
@@ -475,7 +479,7 @@ STYLE CADASTRAR USUÁRIO
 }
 
 .cadastrar-usuario input[type=submit]{
-  width: 92%; 
+  width: 92%;
   margin-bottom: 1.3em;
 }
 
@@ -497,7 +501,7 @@ STYLE CADASTRAR VIAGEM
   width: 27.2em;
   height: 20em;
   background: white;
-  margin: 0 auto; 
+  margin: 0 auto;
 }
 
 .nav-form{
@@ -523,7 +527,7 @@ STYLE CADASTRAR VIAGEM
 }
 
 .cadastrar-viagem input[type=submit]{
-  width: 100%; 
+  width: 100%;
 }
 
 .cadastrar-viagem p{
@@ -540,7 +544,7 @@ STYLE PERFIL USUÁRIO
   width: 21em;
   height: 30em;
   margin: 0 auto;
-  padding-top: 3em;  
+  padding-top: 3em;
 }
 
 .container-perfil .info-perfil{
@@ -554,12 +558,12 @@ STYLE PERFIL USUÁRIO
 }
 
 .container-perfil .img-perfil{
- width: 5em; 
+ width: 5em;
  padding-left: 0.6em;
 }
 
-.img-perfil .foto-perfil{ 
-  max-width: 100%; 
+.img-perfil .foto-perfil{
+  max-width: 100%;
   overflow: hidden;
   margin: 0.4em 0 0 0.5em;
   border: 4px solid aliceblue;
@@ -567,15 +571,15 @@ STYLE PERFIL USUÁRIO
 
 .container-perfil a{
   text-decoration: none;
-  color: white;    
+  color: white;
 }
 
-.container-perfil button{  
+.container-perfil button{
   width: 14em;
   margin-top: 6em;
 }
 
-.container-perfil button:hover{ 
+.container-perfil button:hover{
   opacity: 0.5;
 }
 
@@ -602,7 +606,7 @@ STYLE PERFIL USUÁRIO
   font-size: 0.5em;
   padding: 0.9em 0;
   background: #ff0000ad;
-  margin-bottom: 2em !important; 
+  margin-bottom: 2em !important;
 }
 
 .container-perfil .desativar:hover{
@@ -686,7 +690,7 @@ STYLE PESQUISAR GRUPO
   float: right;
  }
 
-.pesquisa-grupo .nome-grupo span{  
+.pesquisa-grupo .nome-grupo span{
   font-size: 0.6em;
   font-weight: bold;
 }
@@ -694,28 +698,28 @@ STYLE PESQUISAR GRUPO
 .pesquisa-grupo .nome-grupo{
   border-bottom: 1px solid #4242;
   padding: 0.4em;
-  height: 1.2em;  
+  height: 1.2em;
 }
 
 .pesquisa-grupo .data{
   float: right;
-  
+
 }
 
 .pesquisa-grupo .btn-participar{
   background: #009fe3;
   text-align: center;
-  padding: 0.3em 0;  
+  padding: 0.3em 0;
 }
 
 .pesquisa-grupo .meu-grupo{
-  background: #00e352b5 !important; 
+  background: #00e352b5 !important;
 }
 
 
 .pesquisa-grupo .btn-participar a{
   text-decoration: none;
-  color: white;  
+  color: white;
   font-size: 0.6em;
 }
 
@@ -723,39 +727,39 @@ STYLE PESQUISAR GRUPO
   opacity: 0.7;
 }
 
-.pesquisa-grupo .dados-grupo{  
+.pesquisa-grupo .dados-grupo{
   background: white;
 }
 
-.pesquisa-grupo .dados-grupo p{  
+.pesquisa-grupo .dados-grupo p{
   font-size: 0.5em;
   padding: 0.1em 3em 0 3em;
   text-align: justify;
 }
 
-.pesquisa-grupo .dados-grupo strong{  
+.pesquisa-grupo .dados-grupo strong{
   font-size: 1.1em;
 }
 
-.pesquisa-grupo .dados-grupo ul{  
+.pesquisa-grupo .dados-grupo ul{
   list-style-type: none;
   display: inline;
 }
 
-.pesquisa-grupo .dados-grupo li{  
+.pesquisa-grupo .dados-grupo li{
  float: left;
  font-size: 0.5em;
  color: #666666;
 }
 
-.pesquisa-grupo .dados-grupo li img{  
+.pesquisa-grupo .dados-grupo li img{
   max-width: 0.9em;
   padding: 0 0.4em;
   position: relative;
   top: 0.1em;
  }
 
- .pesquisa-grupo .dados-grupo .dados{  
+ .pesquisa-grupo .dados-grupo .dados{
     padding: 0.2em 0 0 1.4em;
  }
 
@@ -769,9 +773,9 @@ STYLE PESQUISAR GRUPO
 
 .form-pesquisar-grupo input[type=text] {
   width: 36.6em;
-  height: 3em;  
-  box-sizing: border-box; 
-  
+  height: 3em;
+  box-sizing: border-box;
+
 }
 
 .form-pesquisar-grupo input[type=submit] {
@@ -802,7 +806,7 @@ STYLE GRUPO
   width: 46em;
 }
 
-.form-grupo input[type=submit]{  
+.form-grupo input[type=submit]{
   width: 9em;
   height: 2.9em;
   margin: 0.4em 0 0 0em;
@@ -813,7 +817,7 @@ STYLE GRUPO
   width: 25.4%;
   padding-left: 2em;
   background: white;
-  margin-right: 1em; 
+  margin-right: 1em;
   float: left;
   height: 100%;
 }
@@ -828,31 +832,31 @@ STYLE GRUPO
   top: -0.5em;
 }
 
-.container-grupo{ 
+.container-grupo{
   width: 65%;
   margin: 0 auto;
   padding-top: 1em;
 }
 
 .card-inc{
-  background: white; 
+  background: white;
   margin: 0 auto;
   /* padding: 1em; */
   text-align: center;
   padding: 0.5em 0;
   margin-bottom: 0.6em;
-  border: solid 1px #4242;  
+  border: solid 1px #4242;
   margin-top: 2em;
 }
 
-.card-msg{  
+.card-msg{
   background: white;
-  border: solid 1px #4242;  
+  border: solid 1px #4242;
   height: 5.7em;
-  margin: 0 auto;    
+  margin: 0 auto;
 }
 
-.card-msg hr{  
+.card-msg hr{
   /* color: white; */
   /* border-color: #66666640; */
   border: solid 0.5px #66666624;
@@ -869,12 +873,12 @@ STYLE GRUPO
   margin: 0.4em 0 0 0.5em;
 }
 
-.mensagem{  
+.mensagem{
   display: flex;
 }
 
 .mensagem .dados-msgm{
-  padding: 0.4em 0 0 1em; 
+  padding: 0.4em 0 0 1em;
   font-weight: bold;
   color: #0064ffc2;
 }
@@ -899,7 +903,7 @@ STYLE GRUPO
 }
 
 table{
-  width: 100%;  
+  width: 100%;
   table-layout: fixed;
 }
 
@@ -908,7 +912,7 @@ table th{
 }
 
 table p{
-  font-weight: normal;  
+  font-weight: normal;
 }
 
 .txt-nao-msg{
@@ -917,7 +921,7 @@ table p{
 
 .comentario{
   position: relative;
-  top: -0.6em; 
+  top: -0.6em;
   padding-left: 3.3em;
 }
 
@@ -987,7 +991,7 @@ STYLE PESQUISAR BLOG
   margin-top: 1.7em;
 }
 
-.img-blog{  
+.img-blog{
   display: flex;
 }
 
