--- a/vambora/public/css/style.css
+++ b/vambora/public/css/style.css
@@ -832,12 +832,20 @@ STYLE GRUPO
   font-size: 0.6em; 
 }
 
+.acomodacao li span{
+  font-size: 0.9em; 
+  position: relative;
+  top: -0.5em;
+  padding-left: 0.5em;
+}
+
 .acomodacao img{
   max-width: 1.1em; 
 }
 
 .acomodacao li img{
   max-width: 1.6em; 
+  border-radius: 50%;
 }
 
 .zero{
