--- a/vambora/public/css/style.css
+++ b/vambora/public/css/style.css
@@ -1173,7 +1173,7 @@ table p{
 
 .card-perfil{
   background: white;
-  height: 14em;
+  height: 20em;
   width: 35em;
   margin: 0 auto;
   border: solid 0.5px #6666664a;
@@ -1204,6 +1204,17 @@ table p{
   margin-bottom: 0.3rem;
 }
 
+.participante li{
+  text-align: justify !important;    
+  padding-left: 4em;
+}
+
+.foto-perfil-particpante{
+  width: 5em;
+  margin: 0 auto;
+  padding-top: 2em;
+
+}
 
 /*
 ================================================
